@@ -49,6 +49,9 @@ void print_pid_stdin(struct text_object *obj, char *p, int p_max_size);
 void print_pid_stdout(struct text_object *obj, char *p, int p_max_size);
 void print_pid_threads(struct text_object *obj, char *p, int p_max_size);
 void print_pid_thread_list(struct text_object *obj, char *p, int p_max_size);
+void print_pid_time_kernelmode(struct text_object *obj, char *p, int p_max_size);
+void print_pid_time_usermode(struct text_object *obj, char *p, int p_max_size);
+void print_pid_time(struct text_object *obj, char *p, int p_max_size);
 void print_pid_uid(struct text_object *obj, char *p, int p_max_size);
 void print_pid_euid(struct text_object *obj, char *p, int p_max_size);
 void print_pid_suid(struct text_object *obj, char *p, int p_max_size);
