@@ -251,6 +251,9 @@ enum text_object_type {
 	OBJ_pid_stdout,
 	OBJ_pid_threads,
 	OBJ_pid_thread_list,
+	OBJ_pid_time_kernelmode,
+	OBJ_pid_time_usermode,
+	OBJ_pid_time,
 	OBJ_pid_uid,
 	OBJ_pid_euid,
 	OBJ_pid_suid,
