@@ -1,5 +1,6 @@
 2009-11-16
-	* Added support for $pid_threads, $pid_thread_list, $pid_nice and $pid_priority
+	* Added support for $pid_threads, $pid_thread_list, $pid_nice,
+	$pid_priority, $pid_time_usermode, $pid_time_kernelmode and $pid_time
 
 2009-11-15
 	* Added support for $pid_parent, $pid_uid, $pid_euid, $pid_suid,
